--- a/LOR MixMonster/Assets/Plugins/Android/FirebaseApp.androidlib/res/values/google-services.xml
+++ b/LOR MixMonster/Assets/Plugins/Android/FirebaseApp.androidlib/res/values/google-services.xml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
-<resources xmlns:tools="http://schemas.android.com/tools" tools:keep="@string/gcm_defaultSenderId,@string/google_storage_bucket,@string/project_id,@string/google_api_key,@string/google_crash_reporting_api_key,@string/google_app_id,@string/default_web_client_id">
+<resources xmlns:tools="http://schemas.android.com/tools" tools:keep="@string/firebase_database_url,@string/gcm_defaultSenderId,@string/google_storage_bucket,@string/project_id,@string/google_api_key,@string/google_crash_reporting_api_key,@string/google_app_id,@string/default_web_client_id">
+  <string name="firebase_database_url" translatable="false">https://left-or-right-gp-dl-default-rtdb.firebaseio.com</string>
   <string name="gcm_defaultSenderId" translatable="false">97707909251</string>
   <string name="google_storage_bucket" translatable="false">left-or-right-gp-dl.appspot.com</string>
   <string name="project_id" translatable="false">left-or-right-gp-dl</string>
